Fixed CSS which pushed down hamburger menu on small screen, and changed menu breakpoint to md

--- a/css/custom.css
+++ b/css/custom.css
@@ -51,7 +51,7 @@ a {
     margin-top: 1em;
   }
   /* footer submit form button */
-  button {
+  footer button {
     margin-top: 1em; 
   }
 
